Added client file upload functionality

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -327,6 +327,8 @@
 
 <div class="content" role="main">
 
+  <cars-component></cars-component>
+
   <!-- Highlight Card -->
   <div class="card highlight-card card-small">
 
