--- a/client/src/app/cars-component/cars.component.html
+++ b/client/src/app/cars-component/cars.component.html
@@ -1,3 +1,14 @@
 <div>
-    <input type="file" (change)="uploadFile($event)" />
+    <label for="fileInput" class="form-label">Input COCO JSON file</label>
+    <input type="file" id="fileInput" class="form-control" (change)="uploadFile($event)" />
+
+    <br />
+
+    <label for="objectsCounter">Number of cars in the center of the images: </label>
+    <div class="spinner-border" role="status" *ngIf="loading">
+        <span class="sr-only"></span>
+    </div>
+    <div class="objectsCounter" *ngIf="!loading">
+        <span> {{numberOfCars}}</span>
+    </div>
 </div>
